--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -3,6 +3,9 @@ name: Metrics
 on:
   schedule: [{cron: "0 * * * *"}]
   workflow_dispatch:
+  push:
+    branches:
+      - main
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
