--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -20,6 +20,7 @@ jobs:
           template: classic
           base: header, metadata
           config_timezone: Asia/Tokyo
+          plugin_introduction: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
@@ -29,7 +30,13 @@ jobs:
           plugin_languages_colors: github
           plugin_languages_limit: 8
           plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
+          plugin_languages_recent_days: 30
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          plugin_stargasers: yes
+          plugin_stars: yes
+          plugin_habits: yes
+          plugin_achievements: yes
+          plugin_code: yes
+          plugin_gists: yes
