--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,23 +18,25 @@ jobs:
           user: n4okins
           template: classic
           base: header, metadata
+
           config_timezone: Asia/Tokyo
+
           plugin_introduction: yes
+          plugin_achievements: yes
+
+
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
+
           plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_analysis_timeout_repositories: 7.5
-          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
-          plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 30
-          plugin_languages_recent_load: 300
-          plugin_languages_sections: most-used
-          plugin_languages_threshold: 0%
-          plugin_stargasers: yes
-          plugin_stars: yes
+          plugin_languages_ignored: HTML,CSS,SCSS,Shell,Makefile,INI,JSON,YAML,Markdown,Jupyter
+          plugin_languages_skipped: Markdown
+          plugin_languages_other: yes
+          plugin_languages_sections: recently-used
+
           plugin_habits: yes
-          plugin_achievements: yes
+          plugin_habits_duration: 14
           plugin_gists: yes
+
+          plugin_leetcode: yes
+          plugin_leetcode_sections: solved, skills, recent
