--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -23,10 +23,7 @@ jobs:
 
           plugin_introduction: yes
           plugin_achievements: yes
-
-
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
+          plugin_lines: yes
 
           plugin_languages: yes
           plugin_languages_ignored: HTML,CSS,SCSS,Shell,Makefile,INI,JSON,YAML,Markdown,Jupyter
