--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,6 +26,7 @@ jobs:
           plugin_lines: yes
 
           plugin_languages: yes
+          plugin_languages_indepth: true
           plugin_languages_ignored: HTML,CSS,SCSS,Shell,Makefile,INI,JSON,YAML,Markdown,Jupyter
           plugin_languages_skipped: Markdown
           plugin_languages_other: yes
@@ -35,5 +36,5 @@ jobs:
           plugin_habits_duration: 14
           plugin_gists: yes
 
-          plugin_leetcode: yes
+          plugin_leetcode: no
           plugin_leetcode_sections: solved, skills, recent
