--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,11 +26,14 @@ jobs:
           plugin_lines: yes
 
           plugin_languages: yes
-          plugin_languages_indepth: true
           plugin_languages_ignored: HTML,CSS,SCSS,Shell,Makefile,INI,JSON,YAML,Markdown,Jupyter
           plugin_languages_skipped: Markdown
           plugin_languages_other: yes
+          plugin_languages_recent_days: 365
           plugin_languages_sections: recently-used
+          plugin_languages_categories: data,markup,programming,prose
+          plugin_languages_recent_categories: data,markup,programming,prose
+          plugin_languages_details: bytes-size, percentage, lines
 
           plugin_habits: yes
           plugin_habits_duration: 14
