--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,7 +17,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           user: n4okins
           template: classic
-          base: header, metadata
+          base: header,activity,community,repositories,metadata
 
           config_timezone: Asia/Tokyo
 
