--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -24,9 +24,17 @@ jobs:
           plugin_introduction: yes
           plugin_achievements: yes
           plugin_lines: yes
-
+          plugin_lines_sections: repositories, history
+          plugin_lines_repositories_limit: 2
+          plugin_lines_history_limit: 1
+          repositories_skipped: |
+            @use.patterns
+            */*
+            +lowlighter/metrics
           plugin_languages: yes
-          plugin_languages_ignored: HTML,CSS,SCSS,Shell,Makefile,INI,JSON,YAML,Markdown,Jupyter
+          plugin_languages_ignored: >-
+            html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
+            gnuplot, jupyter, svg, toml, yaml, json, xml, ini, properties, markdown, text, plaintext
           plugin_languages_skipped: Markdown
           plugin_languages_other: yes
           plugin_languages_recent_days: 365
