--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,14 +27,11 @@ jobs:
           plugin_lines_sections: repositories, history
           plugin_lines_repositories_limit: 2
           plugin_lines_history_limit: 1
-          repositories_skipped: |
-            @use.patterns
-            */*
-            +lowlighter/metrics
+
           plugin_languages: yes
-          plugin_languages_ignored: >-
-            html, css, tex, less, dockerfile, makefile, qmake, lex, cmake, shell,
-            gnuplot, jupyter, svg, toml, yaml, json, xml, ini, properties, markdown, text, plaintext
+          plugin_languages_ignored: |
+            HTML,CSS,JavaScript,SCSS,TypeScript,Vue,JSON,Markdown,XML,YAML,Jupyter Notebook,Shell
+
           plugin_languages_skipped: Markdown
           plugin_languages_other: yes
           plugin_languages_recent_days: 365
@@ -44,6 +41,7 @@ jobs:
           plugin_languages_details: bytes-size, percentage, lines
 
           plugin_habits: yes
+          plugin_habits_charts: yes
           plugin_habits_duration: 14
           plugin_gists: yes
 
