--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -24,8 +24,9 @@ jobs:
           plugin_introduction: yes
           plugin_achievements: yes
           plugin_lines: yes
-          plugin_lines_sections: repositories, history
-          plugin_lines_repositories_limit: 2
+          plugin_lines_sections: base,repositories,history
+          plugin_lines_skipped: obsidian,.config,n4okins.github.io
+          plugin_lines_repositories_limit: 10
           plugin_lines_history_limit: 1
 
           plugin_languages: yes
