--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           user: n4okins
-          template: classic
+          template: repository
           base: header,activity,community,repositories,metadata
 
           config_timezone: Asia/Tokyo
